Final project example

--- a/svelte-project-9/src/app.html
+++ b/svelte-project-9/src/app.html
@@ -13,3 +13,9 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<!--
+
+	Aqui só é bom colocar links para fontes externas
+
+-->
